# szamitogep-biztonsag-hf

./: .gitignore  README.md
CAFFParser/: CMakeLists.txt  caff_parser.cpp  caff_parser.h  main.cpp
CAFFParser/caff/: caff.cpp  caff.h  caff_animation.cpp  caff_animation.h  caff_credits.cpp  caff_credits.h  caff_header.cpp  caff_header.h
CAFFParser/ciff/: ciff.cpp  ciff.h  ciff_content.cpp  ciff_content.h  ciff_header.cpp  ciff_header.h
CAFFParser/converter/: caff_to_gif.cpp  caff_to_gif.h  caff_to_gif.hpp  file_to_caff.cpp  file_to_caff.h  file_to_caff.hpp  gif.h
CAFFParser/data_manipulation/: helper.cpp  helper.h
CAFFParser/helper/: help.cpp  help.h
Trumpery/: Trumpery.sln
Trumpery/Trumpery/: Program.cs  Startup.cs  Trumpery.csproj  WeatherForecast.cs  appsettings.json
Trumpery/Trumpery/ClientApp/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
Trumpery/Trumpery/Controllers/: CaffController.cs  CommentController.cs  UsersController.cs
Trumpery/Trumpery/DTOs/: CaffResponse.cs  CaffsResponse.cs  CommentRequest.cs  CommentResponse.cs  SingleStringRequest.cs  UserLoginRequest.cs  UserRegisterRequest.cs  UserResponse.cs  UsersResponse.cs
Trumpery/Trumpery/Data/: TrumperyContext.cs
Trumpery/Trumpery/Migrations/: 20211129155731_InitialCreate.Designer.cs  20211129155731_InitialCreate.cs  20211130165922_InitialCreate.Designer.cs  20211130165922_InitialCreate.cs  20211130210503_InitialCreate.Designer.cs  20211201204943_InitialCreate.cs  (+2 more)
nest-api/: db  nest-cli.json  package-lock.json  package.json
nest-api/src/: app.module.ts
(+102 files in other folders)
